--- a/lines/02-line-chart.html
+++ b/lines/02-line-chart.html
@@ -166,11 +166,11 @@
     svg.select('.x.axis').selectAll('.tick line')
       .attr('transform', 'translate(25, 0)');
 
-    svg.selectAll('.xline')
-      .attr('transform', 'translate(20, 0)');
+    // svg.selectAll('.xline')
+    //   .attr('transform', 'translate(20, 0)');
 
-    svg.selectAll('.dot')
-      .attr('transform', 'translate(20, 0)');
+    // svg.selectAll('.dot')
+    //   .attr('transform', 'translate(20, 0)');
   </script>
 </body>
 
