--- a/0.jin-practice/10-SecondLine.html
+++ b/0.jin-practice/10-SecondLine.html
@@ -5,10 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>8.Brentdy</title>
+    <title>10 Second Line chart</title>
     <style>
         .tick line {
             stroke: #ccc;
+        }
+
+        .wrapper {
+            position: relative;
+        }
+
+        .listening-rect {
+            fill: transparent;
         }
     </style>
 </head>
@@ -33,6 +41,8 @@
             y2Data = [];
         // filterPriceData = []; //折線圖Y1單價過濾0
 
+        let dataset2 = []
+
 
         // 建立svg大小
         svg.attr('width', svgwidth)
@@ -44,13 +54,20 @@
                 getDataset = getData.objlist.map(d => d),
                 getFilterPriceData = getDataset.filter(d => d.UnitPrice !== 0);
 
-            const XData = getData.objlist.map(d => d.Date)
+            // const XData = getData.objlist.map(d => d.Date)
             // console.log(XData)
             // 資料存到全域
             data = getData;
             dataset = getDataset;
             filterPriceData = getFilterPriceData;
 
+            // 取第二筆資料畫折線圖
+            const getData2 = await d3.json('./data2.json'),
+                getDataset2 = getData2.objlist.map(d => d),
+                getFilterPriceData2 = getDataset2.filter(d => d.UnitPrice !== 0);
+
+            dataset2 = getDataset2;
+            filterPriceData2 = getFilterPriceData2;
 
             drawChart()
         }
@@ -196,10 +213,7 @@
                 .attr("stroke-width", 2)
                 .style("stroke-dasharray", "4,4");
 
-
-
             // 折線圖圓點點
-            // 折線圖圓點
             svg.selectAll('.dot')
                 .data(filteredData)
                 .enter()
@@ -211,6 +225,80 @@
                 .attr('r', 5)
                 .attr('fill', '#fff')
                 .attr("stroke", "orange")
+
+            // 第二條折線圖
+            const line2 = svg.append('g')
+                .append("path")
+                .attr("d", lineChart(dataset2))
+                .attr("fill", "none")
+                .attr("stroke", "green")
+                .attr("stroke-width", 2);
+
+            let filteredData2 = dataset2.filter(lineChart.defined());
+
+            // 第二條覆蓋的dashed
+            svg.append('g')
+                .append("path")
+                .attr("d", lineChart(filteredData2))
+                .attr("fill", "none")
+                .attr("stroke", "green")
+                .attr("stroke-width", 2)
+                .style("stroke-dasharray", "4,4");
+
+
+            // 第二條折線圖圓點
+            svg.selectAll('.dot2')
+                .data(filteredData2)
+                .enter()
+                .append('g')
+                .classed('dot2', true)
+                .append('circle')
+                .attr('cx', d => xScale(xAccessor(d)) + margin)
+                .attr('cy', d => y1Scale(y1Accessor(d)))
+                .attr('r', 5)
+                .attr('fill', '#fff')
+                .attr("stroke", "green")
+
+            // 增加滑鼠事件的監聽
+            // const listeningRect = svg
+            //     .append("rect")
+            //     .attr("class", "listening-rect")
+            //     .attr("width", svgwidth)
+            //     .attr("height", svgheight)
+            //     .on("mousemove", onMouseMove)
+            //     .on("mouseleave", onMouseLeave);
+
+            // // 增加hover時的X軸直線
+            // const xMouseAxisLine = svg
+            //     .append("g")
+            //     .append("rect")
+            //     .attr("class", "dotted")
+            //     .attr("stroke-width", "1px")
+            //     .attr("width", ".5px")
+            //     .attr("height", svgheight);
+
+            // function onMouseMove() {
+            //     const mousePosition = d3.pointer(event, this);
+            //     const hoveredDate = xScale.invert(mousePosition[0]);
+
+            //     const getDistanceFromHoveredDate = (d) =>
+            //         Math.abs(xAccessor(d) - hoveredDate);
+            //     const closestIndex = d3.scan(
+            //         dataset,
+            //         (a, b) => getDistanceFromHoveredDate(a) - getDistanceFromHoveredDate(b)
+            //     );
+            //     const closestDataPoint = dataset[closestIndex];
+            //     console.table(closestDataPoint);
+
+
+            // }
+
+            // function onMouseLeave() {}
+
+
+
+
+
 
             // 繪製長條圖
             const barChart = svg.append('g')
