--- a/0.jin-practice/11.mouseEvent.html
+++ b/0.jin-practice/11.mouseEvent.html
@@ -5,10 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>8.Brentdy</title>
+    <title>11 mouse Event</title>
     <style>
         .tick line {
             stroke: #ccc;
+        }
+
+        .wrapper {
+            position: relative;
+        }
+
+        .listening-rect {
+            fill: transparent;
         }
     </style>
 </head>
@@ -20,18 +28,19 @@
     <script>
         // 建立svg畫布
         const svg = d3.select('#wrapper').append('svg');
+        // 畫布尺寸RWD但非即時寬高
         let svgwidth = window.innerWidth,
             svgheight = 500,
             margin = 60,
             chartWidth = svgwidth - margin,
             chartHeight = svgheight - margin * 2;
 
+
         let data = [], //get資料
             dataset = [], //取出XY軸要用的陣列資料
             xData = [],
             y1Data = [],
             y2Data = [];
-        // filterPriceData = []; //折線圖Y1單價過濾0
 
 
         // 建立svg大小
@@ -44,17 +53,15 @@
                 getDataset = getData.objlist.map(d => d),
                 getFilterPriceData = getDataset.filter(d => d.UnitPrice !== 0);
 
-            const XData = getData.objlist.map(d => d.Date)
+            // const XData = getData.objlist.map(d => d.Date)
             // console.log(XData)
             // 資料存到全域
             data = getData;
             dataset = getDataset;
             filterPriceData = getFilterPriceData;
 
-
             drawChart()
         }
-
         // X軸繪製
         function drawChart() {
             // X軸
@@ -196,10 +203,7 @@
                 .attr("stroke-width", 2)
                 .style("stroke-dasharray", "4,4");
 
-
-
             // 折線圖圓點點
-            // 折線圖圓點
             svg.selectAll('.dot')
                 .data(filteredData)
                 .enter()
@@ -211,6 +215,43 @@
                 .attr('r', 5)
                 .attr('fill', '#fff')
                 .attr("stroke", "orange")
+
+            // 增加滑鼠事件的監聽
+            // const listeningRect = svg
+            //     .append("rect")
+            //     .attr("class", "listening-rect")
+            //     .attr("width", svgwidth)
+            //     .attr("height", svgheight)
+            //     .on("mousemove", onMouseMove)
+            //     .on("mouseleave", onMouseLeave);
+
+            // // 增加hover時的X軸直線
+            // const xMouseAxisLine = svg
+            //     .append("g")
+            //     .append("rect")
+            //     .attr("class", "dotted")
+            //     .attr("stroke-width", "1px")
+            //     .attr("width", ".5px")
+            //     .attr("height", svgheight);
+
+            // function onMouseMove() {
+            //     const mousePosition = d3.pointer(event, this);
+            //     const hoveredDate = xScale.invert(mousePosition[0]);
+
+            //     const getDistanceFromHoveredDate = (d) =>
+            //         Math.abs(xAccessor(d) - hoveredDate);
+            //     const closestIndex = d3.scan(
+            //         dataset,
+            //         (a, b) => getDistanceFromHoveredDate(a) - getDistanceFromHoveredDate(b)
+            //     );
+            //     const closestDataPoint = dataset[closestIndex];
+            //     console.table(closestDataPoint);
+
+
+            // }
+
+            // function onMouseLeave() {}
+
 
             // 繪製長條圖
             const barChart = svg.append('g')
@@ -225,7 +266,6 @@
             // console.log(dataset.map(d => y2Scale(y2Accessor(d))))
 
         }
-
 
         getData()
     </script>
