--- a/0.jin-practice/2-lineChart&hover.html
+++ b/0.jin-practice/2-lineChart&hover.html
@@ -142,6 +142,12 @@
                 .style("font-size", "20px")
                 .style("text-decoration", "underline");
 
+
+            // const bounds = wrapper
+            // .append('g').style("transform",
+            //     `translate(${dimensions.margin.left}px,${dimensions.margin.top}px)`
+            // );
+
             // 增加滑鼠事件的監聽
             const listeningRect = bounds
                 .append("rect")
