--- a/0.jin-practice/2-lineChart&hover6.html
+++ b/0.jin-practice/2-lineChart&hover6.html
@@ -159,88 +159,88 @@
                 .style("font-size", "20px")
                 .style("text-decoration", "underline");
 
-            // // 增加滑鼠事件的監聽
-            // const listeningRect = bounds
-            //     .append("rect")
-            //     .attr("class", "listening-rect")
-            //     .attr("width", dimensions.boundedWidth)
-            //     .attr("height", dimensions.boundedHeight)
-            //     .on("mousemove", onMouseMove)
-            //     .on("mouseleave", onMouseLeave);
+            // 增加滑鼠事件的監聽
+            const listeningRect = bounds
+                .append("rect")
+                .attr("class", "listening-rect")
+                .attr("width", dimensions.boundedWidth)
+                .attr("height", dimensions.boundedHeight)
+                .on("mousemove", onMouseMove)
+                .on("mouseleave", onMouseLeave);
 
-            // // 增加hover時的X軸直線
-            // const xAxisLine = bounds
-            //     .append("g")
-            //     .append("rect")
-            //     .attr("class", "dotted")
-            //     .attr("stroke-width", "1px")
-            //     .attr("width", ".5px")
-            //     .attr("height", dimensions.boundedHeight);
+            // 增加hover時的X軸直線
+            const xAxisLine = bounds
+                .append("g")
+                .append("rect")
+                .attr("class", "dotted")
+                .attr("stroke-width", "1px")
+                .attr("width", ".5px")
+                .attr("height", dimensions.boundedHeight);
 
-            // // 定義mouseMove 跟mouseLeave監聽事件
-            // // D3 v6的pointer 事件調整請見 https://stackoverflow.com/questions/64189608/d3-v6-pointer-function-not-adjusting-for-scale-and-translate
+            // 定義mouseMove 跟mouseLeave監聽事件
+            // D3 v6的pointer 事件調整請見 https://stackoverflow.com/questions/64189608/d3-v6-pointer-function-not-adjusting-for-scale-and-translate
 
-            // function onMouseMove() {
-            //     // pointer的用法再了解，要帶入事件跟參數
-            //     const mousePosition = d3.pointer(event, this);
-            //     const hoveredDate = xScale.invert(mousePosition[0]);
-            //     // console.log(hoveredDate)
+            function onMouseMove() {
+                // pointer的用法再了解，要帶入事件跟參數
+                const mousePosition = d3.pointer(event, this);
+                const hoveredDate = xScale.invert(mousePosition[0]);
+                // console.log(hoveredDate)
 
-            //     const getDistanceFromHoveredDate = (d) =>
-            //         Math.abs(xAccessor(d) - hoveredDate);
-            //     const closestIndex = d3.scan(
-            //         dataset,
-            //         (a, b) => getDistanceFromHoveredDate(a) - getDistanceFromHoveredDate(b)
-            //     );
-            //     const closestDataPoint = dataset[closestIndex];
-            //     console.table(closestDataPoint);
+                const getDistanceFromHoveredDate = (d) =>
+                    Math.abs(xAccessor(d) - hoveredDate);
+                const closestIndex = d3.scan(
+                    dataset,
+                    (a, b) => getDistanceFromHoveredDate(a) - getDistanceFromHoveredDate(b)
+                );
+                const closestDataPoint = dataset[closestIndex];
+                console.table(closestDataPoint);
 
-            //     const closestXValue = xAccessor(closestDataPoint);
-            //     const closestYValue = yAccessor(closestDataPoint);
+                const closestXValue = xAccessor(closestDataPoint);
+                const closestYValue = yAccessor(closestDataPoint);
 
-            //     const formatDate = d3.timeFormat("%B %A %-d, %Y");
-            //     tooltip.select("#date").text(formatDate(closestXValue));
+                const formatDate = d3.timeFormat("%B %A %-d, %Y");
+                tooltip.select("#date").text(formatDate(closestXValue));
 
-            //     const formatInternetUsage = (d) => `${d3.format(".1f")(d)} GB`;
-            //     tooltip.select("#internet").html(formatInternetUsage(closestYValue));
+                const formatInternetUsage = (d) => `${d3.format(".1f")(d)} GB`;
+                tooltip.select("#internet").html(formatInternetUsage(closestYValue));
 
-            //     const x = xScale(closestXValue) + dimensions.margin.left;
-            //     const y = yScale(closestYValue) + dimensions.margin.top;
+                const x = xScale(closestXValue) + dimensions.margin.left;
+                const y = yScale(closestYValue) + dimensions.margin.top;
 
-            //     //Grab the x and y position of our closest point,
-            //     //shift our tooltip, and hide/show our tooltip appropriately
+                //Grab the x and y position of our closest point,
+                //shift our tooltip, and hide/show our tooltip appropriately
 
-            //     tooltip.style(
-            //         "transform",
-            //         `translate(` + `calc( -50% + ${x}px),` + `calc(-100% + ${y}px)` + `)`
-            //     );
+                tooltip.style(
+                    "transform",
+                    `translate(` + `calc( -50% + ${x}px),` + `calc(-100% + ${y}px)` + `)`
+                );
 
-            //     tooltip.style("opacity", 1);
+                tooltip.style("opacity", 1);
 
-            //     tooltipCircle
-            //         .attr("cx", xScale(closestXValue))
-            //         .attr("cy", yScale(closestYValue))
-            //         .style("opacity", 1);
+                tooltipCircle
+                    .attr("cx", xScale(closestXValue))
+                    .attr("cy", yScale(closestYValue))
+                    .style("opacity", 1);
 
-            //     xAxisLine.attr("x", xScale(closestXValue));
-            // }
+                xAxisLine.attr("x", xScale(closestXValue));
+            }
 
-            // function onMouseLeave() {
-            //     tooltip.style("opacity", 0);
+            function onMouseLeave() {
+                tooltip.style("opacity", 0);
 
-            //     tooltipCircle.style("opacity", 0);
-            // }
+                tooltipCircle.style("opacity", 0);
+            }
 
-            // // Add a circle under our tooltip, right over the “hovered” point
-            // const tooltip = d3.select("#tooltip");
-            // const tooltipCircle = bounds
-            //     .append("circle")
-            //     .attr("class", "tooltip-circle")
-            //     .attr("r", 4)
-            //     .attr("stroke", "orange")
-            //     .attr("fill", "white")
-            //     .attr("stroke-width", 2)
-            //     .style("opacity", 0);
+            // Add a circle under our tooltip, right over the “hovered” point
+            const tooltip = d3.select("#tooltip");
+            const tooltipCircle = bounds
+                .append("circle")
+                .attr("class", "tooltip-circle")
+                .attr("r", 4)
+                .attr("stroke", "orange")
+                .attr("fill", "white")
+                .attr("stroke-width", 2)
+                .style("opacity", 0);
 
         }
         drawLineChart()
