--- a/0.jin-practice/12.resize-V3.html
+++ b/0.jin-practice/12.resize-V3.html
@@ -65,6 +65,9 @@
             const margin = 40;
             let width = parseInt(d3.select('.content').style('width'), 10) - margin * 2,
                 height = parseInt(d3.select('.content').style('height'), 10) - margin * 2;
+            w1 = d3.select('.content').style('width');
+            h1 = d3.select('.content').style('height');
+            console.log(h1)
 
             width = width < 200 ? 200 : width;
             height = height < 100 ? 100 : height;
