--- a/0.jin-practice/13.resize(fail).html
+++ b/0.jin-practice/13.resize(fail).html
@@ -5,19 +5,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>11 mouse Event</title>
+    <title>13 Resize</title>
     <style>
-        .tick line {
-            stroke: #ccc;
+        html,
+        body {
+            width: 100%;
+            height: 100%;
+            padding: 0;
+            margin: 0;
         }
 
-        .wrapper {
-            position: relative;
+
+        body {
+            padding: 0;
+            margin: 0;
         }
 
-        .listening-rect {
-            fill: transparent;
+        #wrapper {
+            display: block;
+            width: 100%;
+            height: 100%;
+            min-width: 300px;
+            max-width: 960px;
+            max-height: 500px;
+            overflow: hidden;
         }
+
+        /* 
+        svg {
+            outline: 1px solid red;
+        } */
+
+        /* #wrapper {
+            outline: 1px solid red;
+        } */
     </style>
 </head>
 
@@ -26,44 +47,34 @@
 
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script>
-        // 建立svg畫布
-        const svg = d3.select('#wrapper').append('svg');
-        // 畫布尺寸RWD但非即時寬高
-        let svgwidth = window.innerWidth,
-            svgheight = 500,
-            margin = 60,
-            chartWidth = svgwidth - margin,
-            chartHeight = svgheight - margin * 2;
+        async function rendering() {
+            let svgwidth = parseInt(d3.select('#wrapper').style('width')),
+                svgheight = parseInt(d3.select('#wrapper').style('height')),
+                margin = 60,
+                chartWidth = svgwidth - margin * 2,
+                chartHeight = svgheight - margin * 2;
+            // console.log(svgheight)
+
+            // 限定寬高不可以小於200
+            chartWidth = svgwidth < 200 ? 200 : chartWidth;
+            chartHeight = svgheight < 200 ? 200 : chartHeight;
+            console.log(chartWidth, chartHeight)
 
 
-        let data = [], //get資料
-            dataset = [], //取出XY軸要用的陣列資料
-            xData = [],
-            y1Data = [],
-            y2Data = [];
+            // 繪製畫布
+            const wrapper = d3.select('#wrapper')
+            wrapper.html(''); //刪掉重rend
+            const svg = wrapper.append('svg');
 
+            svg.attr('width', chartWidth + margin * 2)
+                .attr('height', chartHeight + margin * 2)
 
-        // 建立svg大小
-        svg.attr('width', svgwidth)
-            .attr('height', svgheight);
+            // 取資料
+            const data = await d3.json('./data.json'),
+                dataset = data.objlist.map(d => d),
+                filterPriceData = dataset.filter(d => d.UnitPrice !== 0);
+            // console.log(dataset)
 
-        // 取資料
-        async function getData() {
-            const getData = await d3.json('./data.json'),
-                getDataset = getData.objlist.map(d => d),
-                getFilterPriceData = getDataset.filter(d => d.UnitPrice !== 0);
-
-            // const XData = getData.objlist.map(d => d.Date)
-            // console.log(XData)
-            // 資料存到全域
-            data = getData;
-            dataset = getDataset;
-            filterPriceData = getFilterPriceData;
-
-            drawChart()
-        }
-        // X軸繪製
-        function drawChart() {
             // X軸
             // 設定X軸參數
             // const xAccessor = (d) => d.map(d => parseInt(d.Date.slice(4)))
@@ -216,42 +227,6 @@
                 .attr('fill', '#fff')
                 .attr("stroke", "orange")
 
-            // 增加滑鼠事件的監聽
-            // const listeningRect = svg
-            //     .append("rect")
-            //     .attr("class", "listening-rect")
-            //     .attr("width", svgwidth)
-            //     .attr("height", svgheight)
-            //     .on("mousemove", onMouseMove)
-            //     .on("mouseleave", onMouseLeave);
-
-            // // 增加hover時的X軸直線
-            // const xMouseAxisLine = svg
-            //     .append("g")
-            //     .append("rect")
-            //     .attr("class", "dotted")
-            //     .attr("stroke-width", "1px")
-            //     .attr("width", ".5px")
-            //     .attr("height", svgheight);
-
-            // function onMouseMove() {
-            //     const mousePosition = d3.pointer(event, this);
-            //     const hoveredDate = xScale.invert(mousePosition[0]);
-
-            //     const getDistanceFromHoveredDate = (d) =>
-            //         Math.abs(xAccessor(d) - hoveredDate);
-            //     const closestIndex = d3.scan(
-            //         dataset,
-            //         (a, b) => getDistanceFromHoveredDate(a) - getDistanceFromHoveredDate(b)
-            //     );
-            //     const closestDataPoint = dataset[closestIndex];
-            //     console.table(closestDataPoint);
-
-
-            // }
-
-            // function onMouseLeave() {}
-
 
             // 繪製長條圖
             const barChart = svg.append('g')
@@ -265,11 +240,12 @@
                 .attr('fill', '#FFA500')
             // console.log(dataset.map(d => y2Scale(y2Accessor(d))))
 
+
+
         }
 
-
-        d3.select(window).on('resize', getData);
-        getData()
+        d3.select(window).on('resize', rendering);
+        rendering()
     </script>
 </body>
 
