rezise完成 (先取資料)

--- a/0.jin-practice/12.resize-V3.html
+++ b/0.jin-practice/12.resize-V3.html
@@ -40,6 +40,10 @@
             stroke: #ef0d0c;
             stroke-width: 1.5px;
         }
+
+        /* svg {
+            outline: 1px solid red;
+        } */
     </style>
 </head>
 
