--- a/0.jin-practice/13.resize.html
+++ b/0.jin-practice/13.resize.html
@@ -27,7 +27,8 @@
             height: 100%;
             min-width: 300px;
             max-width: 960px;
-            max-height: 500px;
+            /* max-height: 500px; */
+            min-height: 250px;
             overflow: hidden;
         }
 
@@ -53,9 +54,9 @@
         // 取到的資料
         let data = [], //get資料
             dataset = [], //取出XY軸要用的陣列資料
-            xData = [],
-            y1Data = [],
-            y2Data = [];
+            xData,
+            dataset2 = [],
+            filterPriceData2 = [];
 
         // 先取資料
         async function getData() {
@@ -69,6 +70,15 @@
             data = getData;
             dataset = getDataset;
             filterPriceData = getFilterPriceData;
+            xData = dataset.map(d => parseInt(d.Date.slice(4)))
+
+            // 取第二筆資料畫折線圖
+            const getData2 = await d3.json('./data2.json'),
+                getDataset2 = getData2.objlist.map(d => d),
+                getFilterPriceData2 = getDataset2.filter(d => d.UnitPrice !== 0);
+
+            dataset2 = getDataset2;
+            filterPriceData2 = getFilterPriceData2;
 
             rendering()
 
@@ -76,15 +86,17 @@
 
         function rendering() {
             let svgwidth = parseInt(d3.select('#wrapper').style('width')),
-                svgheight = parseInt(d3.select('#wrapper').style('height')),
-                margin = 60,
+                // svgheight = parseInt(d3.select('#wrapper').style('height')),
+                svgheight = svgwidth * 0.7
+            margin = 60,
                 chartWidth = svgwidth - margin,
                 chartHeight = svgheight - margin * 2;
-            // console.log(svgheight)
+            console.log(svgwidth, svgheight)
 
             // 限定寬高不可以小於200
             chartWidth = svgwidth < 200 ? 200 : chartWidth;
-            chartHeight = svgheight < 300 ? 300 : chartHeight;
+            chartHeight = svgheight < 300 ? 230 : chartHeight;
+            chartHeight = chartHeight > 500 ? 450 : chartHeight;
             console.log(chartWidth, chartHeight)
 
             // 繪製畫布
@@ -102,8 +114,10 @@
             // 設定X軸範圍:月份
             let xScale = d3.scaleBand()
                 // .domain(xAccessor(dataset))
-                .domain(dataset.map(d => parseInt(d.Date.slice(4))))
+                // .domain(dataset.map(d => parseInt(d.Date.slice(4))))  //簡化成xData
+                .domain(xData)
                 .range([0, chartWidth - margin])
+                .padding([0.9]) //決定tick之前的間距 (會影響長條圖的width)
 
             // X軸線與ticks
             let xAxis = d3.axisBottom(xScale) //tick在axis下方的線，根據xScale給的範圍來訂
@@ -111,17 +125,38 @@
                 .tickSizeInner(-(chartHeight - margin)) //軸線向內(上)延伸，比照繪圖區高度
                 .tickPadding(10) //tick text與軸線拉開距離
 
+            // 手機板時減少X軸的tick
+            let xMobileTicks = []
+            xData.forEach(item => {
+                if (item % 2 == 0) {
+                    // console.log(item)
+                    xMobileTicks.push(item)
+                }
+            })
+
+            // 手機板跟電腦版的tick數量改動
+            if (svgwidth < 500) {
+                // .tickValues() 控制哪些tick要顯示
+                // .tickValues(xMobileTicks)
+                var xAxisWeb = xAxis.tickFormat(function (d) { //把設定好的軸線跟ticks接過來，用tickFormat綁上文字
+                    return d + "月";
+                }).tickValues(xMobileTicks);
+
+            } else {
+                var xAxisWeb = xAxis.tickFormat(function (d) { //把設定好的軸線跟ticks接過來，用tickFormat綁上文字
+                    return d + "月";
+                });
+            }
+
             // 繪製X軸
             const xAxisLine = svg.append('g')
                 .attr('class', 'xAxis')
                 .style('transform', `translate(${margin}px,${chartHeight}px)`) //讓X軸到最下方
-                .call(xAxis.tickFormat(function (d) { //把設定好的軸線跟ticks接過來，用tickFormat綁上文字
-                    return d + "月";
-                }))
+                .call(xAxisWeb)
 
             // X軸線位移(左右終點)
             // svg.select('.xAxis').selectAll('.tick text') //先挪文字到軸線中間
-            //     .attr("dx", `${margin/4}`);
+            //     .attr("dx", `-${margin/2}`);
 
             // svg.select('.xAxis').selectAll('.tick line')
             //     .attr('transform', `translate(${margin/4}, 0)`)
@@ -245,15 +280,48 @@
                 .attr('fill', '#fff')
                 .attr("stroke", "orange")
 
+            // 繪製第二條折線圖
+            const line2 = svg.append('g')
+                .append("path")
+                .attr("d", lineChart(dataset2))
+                .attr("fill", "none")
+                .attr("stroke", "green")
+                .attr("stroke-width", 2);
+
+            let filteredData2 = dataset2.filter(lineChart.defined());
+
+            // 第二條覆蓋的dashed
+            svg.append('g')
+                .append("path")
+                .attr("d", lineChart(filteredData2))
+                .attr("fill", "none")
+                .attr("stroke", "green")
+                .attr("stroke-width", 2)
+                .style("stroke-dasharray", "4,4");
+
+
+            // 第二條折線圖圓點
+            svg.selectAll('.dot2')
+                .data(filteredData2)
+                .enter()
+                .append('g')
+                .classed('dot2', true)
+                .append('circle')
+                .attr('cx', d => xScale(xAccessor(d)) + margin)
+                .attr('cy', d => y1Scale(y1Accessor(d)))
+                .attr('r', 5)
+                .attr('fill', '#fff')
+                .attr("stroke", "green")
+
 
             // 繪製長條圖
             const barChart = svg.append('g')
                 .selectAll('rect')
                 .data(dataset)
                 .join('rect')
-                .attr('x', (d) => xScale(xAccessor(d)) + margin)
+                .attr('x', (d) => xScale(xAccessor(d)) + (margin))
                 .attr('y', (d) => y2Scale(y2Accessor(d)))
-                .attr('width', '3%')
+                .attr('width', xScale.bandwidth() + 5)
                 .attr('height', (d) => chartHeight - y2Scale(y2Accessor(d)))
                 .attr('fill', '#FFA500')
             // console.log(dataset.map(d => y2Scale(y2Accessor(d))))
